Corrected footer in dark mode

--- a/workFolder/week02/main-page/src/components/page-blocks/footer/_footer.scss
+++ b/workFolder/week02/main-page/src/components/page-blocks/footer/_footer.scss
@@ -1,6 +1,5 @@
 .footer-basic {
-  padding:40px 0;
-  background-color:#ffffff;
+  padding:40px 0 0;
   color:#4b4c4d;
 }
 
